<resources>
    <string name="app_name">Week1Daily3Calculator</string>
    <string name="ac">AC</string>
    <string name="ce">CE</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal">.</string>
    <string name="percentile">%</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="x">x</string>
    <string name="equals">=</string>
    <string name="negative">+/-</string>
    <string name="factorial">x!</string>
    <string name="pi">pi</string>
    <string name="eConstant">e</string>
    <string name="x_2">x^2</string>
    <string name="inverse">1/x</string>
    <string name="exponent">x^y</string>
    <string name="squareRoot">√</string>
    <string name="absoluteValue">|x|</string>
</resources>
