<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:layout_weight="0.15"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:layout_weight="0.15"
        android:textSize="@dimen/resultSize"
        android:textColor="@color/lightBlue" />

    <GridLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/allClear"
            android:onClick="buttonClicked"
            android:text="@string/ac"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"/>

        <Button
            android:id="@+id/clearEntry"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/ce" />

        <Button
            android:id="@+id/percentile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/percentile" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/divide" />

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_1" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_2" />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_3" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/x" />

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_4" />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_5" />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_6" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/subtract" />

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_7" />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_8" />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_9" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/add" />

        <Button
            android:id="@+id/decimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/_0" />

        <Button
            android:id="@+id/negative"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/negative" />

        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/equals" />

        <Button
            android:id="@+id/pi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/pi"
            android:visibility="gone"/>

        <Button
            android:id="@+id/eConstant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/eConstant"
            android:visibility="gone"/>

        <Button
            android:id="@+id/absoluteValue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/absoluteValue"
            android:visibility="gone"/>

        <Button
            android:id="@+id/inverse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/buttonWeights"
            android:onClick="buttonClicked"
            android:text="@string/inverse"
            android:visibility="gone"/>

    </GridLayout>

</LinearLayout>